[gd_scene load_steps=17 format=3 uid="uid://cw0bsi5o5bktw"]

[ext_resource type="PackedScene" uid="uid://b0cn8t8lq7g1i" path="res://Simulation_UI.tscn" id="1_ppb3h"]
[ext_resource type="Script" path="res://Target_1.gd" id="2_pmje4"]
[ext_resource type="PackedScene" uid="uid://cyarg3jeyej32" path="res://Robot_model/robo_zizala_v2.blend" id="3_02hdr"]
[ext_resource type="Script" path="res://SkeletonIK3D.gd" id="4_guk58"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ujqyk"]
albedo_color = Color(0.756863, 0.415686, 0.14902, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_xh1s5"]
material = SubResource("StandardMaterial3D_ujqyk")
size = Vector2(100, 20)
orientation = 2

[sub_resource type="Gradient" id="Gradient_456gj"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qheqt"]
gradient = SubResource("Gradient_456gj")
fill_from = Vector2(0.897436, 0.816239)
fill_to = Vector2(0.508547, 0.602564)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5md6c"]
albedo_color = Color(0.568627, 0.709804, 1, 1)
albedo_texture = SubResource("GradientTexture2D_qheqt")

[sub_resource type="PlaneMesh" id="PlaneMesh_dwvtj"]
material = SubResource("StandardMaterial3D_5md6c")
size = Vector2(10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_80elx"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_it7jl"]
material = SubResource("StandardMaterial3D_80elx")
height = 1.0

[sub_resource type="Animation" id="Animation_14h3r"]
resource_name = "home_tar1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:interpolation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_5xpua"]
resource_name = "home_tar2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:interpolation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_x0q62"]
resource_name = "target_move"
length = 4.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../../Home_target")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 4, 5, 0.5, 1, 3, 3.5, 5, 1, 1, 3, 2.65, 5, 1.5, 1, 3, 3.5, 5, 2, 1, 0, 4, 5, 2.5, 1, -3, 3.5, 5, 3, 1, -3, 2.65, 5, 3.5, 1, -3, 3.5, 5, 4, 1, 0, 4, 5)
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../../Target_1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"anim_reparent"
}, {
"args": [],
"method": &"anim_deparent"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pfnw0"]
_data = {
"home_tar1": SubResource("Animation_14h3r"),
"home_tar2": SubResource("Animation_5xpua"),
"target_move": SubResource("Animation_x0q62")
}

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.984808, -0.0733868, 0.157378, 0, 0.906308, 0.422618, -0.173648, -0.416198, 0.892539, 3, 7, 12)
fov = 90.0

[node name="Control" parent="." instance=ExtResource("1_ppb3h")]

[node name="wall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, -2)
top_level = true
mesh = SubResource("PlaneMesh_xh1s5")

[node name="floor" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
mesh = SubResource("PlaneMesh_dwvtj")

[node name="Target_1" type="Node3D" parent="."]
transform = Transform3D(1, 0, -3.82137e-15, 3.82137e-15, 4.37114e-08, 1, 0, -1, 4.37114e-08, 3, 2.65, 5)
script = ExtResource("2_pmje4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target_1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -2.15)
mesh = SubResource("CylinderMesh_it7jl")
skeleton = NodePath("../..")

[node name="Home_target" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 5)

[node name="Target_2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, -3, 1, 5)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_it7jl")
skeleton = NodePath("../..")

[node name="robo_zizala_v2" parent="." instance=ExtResource("3_02hdr")]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0, -1.62, 0)

[node name="SkeletonIK3D" type="SkeletonIK3D" parent="robo_zizala_v2/Armature/Skeleton3D" index="0"]
process_priority = 1
root_bone = &"Bone.001"
tip_bone = &"end_effector"
interpolation = 0.0
target_node = NodePath("../../../../Target_1")
script = ExtResource("4_guk58")

[node name="animation" type="AnimationPlayer" parent="robo_zizala_v2/Armature/Skeleton3D/SkeletonIK3D"]
libraries = {
"": SubResource("AnimationLibrary_pfnw0")
}

[node name="end_effector" parent="robo_zizala_v2/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.298, 1.00488e-11, -3.72616e-15, -3.72616e-15, -8.62063e-16, -0.298, -1.00488e-11, 0.298, -8.62063e-16, -2.43557e-08, 198.566, -2.78121e-09)

[node name="link_003" parent="robo_zizala_v2/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.29768, 1.40735e-11, 5.82325e-11, 5.82325e-11, -4.20032e-15, -0.29768, -1.40735e-11, 0.29768, -4.20032e-15, 1.19084e-08, 158.027, 1.20013e-08)

[node name="link_002" parent="robo_zizala_v2/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.29768, -3.89338e-11, 1.07885e-14, 1.07885e-14, -4.2884e-15, -0.29768, 3.89338e-11, 0.29768, -4.2884e-15, 3.27031e-08, 118.529, 8.86485e-09)

[node name="link_001" parent="robo_zizala_v2/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.29768, 1.32118e-11, 5.82041e-11, 5.8204e-11, 8.45676e-16, -0.29768, -1.32118e-11, 0.29768, 8.45677e-16, 7.3454e-09, 78.8734, 7.34691e-09)

[node name="link" parent="robo_zizala_v2/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.29768, -2.51386e-11, 1.27394e-14, 1.27394e-14, -4.28181e-15, -0.29768, 2.51386e-11, 0.29768, -4.28181e-15, -1.19349e-15, 39.2995, 1.86253e-09)

[node name="base" parent="robo_zizala_v2/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.29768, 0, 0, 0, 8.61138e-16, -0.29768, 0, 0.29768, 8.61138e-16, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.939693, -0.296198, 0.17101, 0, 0.5, 0.866025, -0.34202, -0.813798, 0.469846, 0, 5.36594, 8.59298)
top_level = true
shadow_enabled = true

[editable path="robo_zizala_v2"]
